# repo-brief

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst  usage.rst
src/repo_brief/: __init__.py  __main__.py  agents_workflow.py  budget.py  cli.py  github_client.py  repo_brief.py
tests/: test_cli_behavior.py  test_repo_brief_utils.py
