[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-brief"
version = "0.1.0"
description = "Agentic CLI for generating GitHub repository briefings and reading plans"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai-agents",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
repo-brief = "repo_brief.repo_brief:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
