[build-system]
requires = [
  "setuptools>=68",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "repo-brief"
version = "0.1.0"
description = "Agentic CLI for generating GitHub repository briefings and reading plans"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "openai-agents",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
]

[project.urls]
Repository = "https://github.com/srichs/repo-brief"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "mypy>=1.12.0",
  "types-requests>=2.32.0.20241016",
  "sphinx>=8.1.0",
  "furo>=2024.8.6",
  "pre-commit>=4.0.0",
]

[project.scripts]
repo-brief = "repo_brief.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --cov=repo_brief --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["repo_brief"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["agents", "dotenv"]
ignore_missing_imports = true
